k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: 447798043017.dkr.ecr.us-east-1.amazonaws.com/my-food:latest
          imagePullPolicy: Always
          command: ['sh', '-c', "bash ./init_app.sh"]
          ports:
            - containerPort: 8000
