k8s/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: api-svc
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
